# lib42

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml  docs.yml
.trunk/: trunk.yaml
docs/: .SRCINFO  Doxyfile.in  PKGBUILD  debian.control  fedora.spec
include/: macros.h  macros.int.h
include/42/alloc/: list.h  map.h  map.int.h  string.h  vec.h
include/42/ctype/: ctype.h  nbr.h
include/42/io/: basic.h
include/42/memory/: cstr.h  ops.h
include/alloc/: string.h
include/memory/: ops.h
scripts/: make_compile_commands_relative.py  package.ts
src/alloc/list/: ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c
src/alloc/map/: map_clear.c  map_create.c  map_entries.c  map_find.c  map_foreach.c  map_free.c  map_get.c  map_get_cstr.c  map_internal.c  map_map.c  map_remove.c  map_remove_cstr.c  map_set.c  map_set_cstr.c  map_set_default.c  map_size.c
src/alloc/string/: string_append.c  string_append_cstr.c  string_append_string.c  string_casecmp.c  string_clear.c  string_clone.c  string_cmp.c  string_cstr.c  string_ends_with.c  string_equals.c  string_erase.c  string_find.c  string_find_cstr.c  string_find_string.c  string_free.c  string_from.c  string_insert.c  string_insert_cstr.c  string_insert_string.c  string_new.c  string_pop_char.c  string_prepend.c  string_prepend_cstr.c  string_prepend_string.c  string_push_char.c  string_replace.c  string_replace_cstr.c  string_replace_string.c  string_reserve.c  string_resize.c  string_rfind.c  string_rfind_cstr.c  string_rfind_string.c  string_shrink_to_fit.c  string_split.c  string_starts_with.c  string_substr.c  string_tagged.c  string_trim.c
src/alloc/vec/: vec_create.c  vec_free.c  vec_get.c  vec_pop_back.c  vec_pop_front.c  vec_push_back.c  vec_push_front.c  vec_resize.c  vec_set.c
src/ctype/ctype/: ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_islower.c  ft_isprint.c  ft_isspace.c  ft_isupper.c  ft_tolower.c  ft_toupper.c
src/ctype/nbr/: cstoi16.c  cstoi32.c  cstoi64.c  cstoi8.c  cstonbr.c  cstou16.c  cstou32.c  cstou64.c  cstou8.c  cstounbr.c  cstr_i16.c  cstr_i32.c  cstr_i64.c  cstr_i8.c  cstr_nbr.c  cstr_u16.c  cstr_u32.c  cstr_u64.c  cstr_u8.c  cstr_unbr.c
src/io/basic/: io_push_char.c  io_push_double.c  io_push_float.c  io_push_hex.c  io_push_int.c  io_push_ldouble.c  io_push_nbytes.c  io_push_nchar.c  io_push_nstr.c  io_push_ptr.c  io_push_str.c  io_push_uint.c
src/memory/cstr/: ft_casecmp.c  ft_strcat.c  ft_strchr.c  ft_strcmp.c  ft_strcpy.c  ft_strcspn.c  ft_strdup.c  ft_strlcat.c  ft_strlen.c  ft_strncat.c  ft_strncmp.c  ft_strncpy.c  ft_strndup.c  ft_strpbrk.c  ft_strrchr.c  ft_strrstr.c  ft_strspn.c  ft_strstr.c
src/memory/ops/: ft_bzero.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmem.c  ft_memmove.c  ft_mempcpy.c  ft_memrchr.c  ft_memset.c
tests/alloc/list/: ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c
tests/alloc/map/: map_clear.c  map_create.c  map_entries.c  map_entry_free.c  map_find_entry.c  map_foreach_map_find.c  map_free.c  map_get.c  map_get_cstr.c  map_key_cmp.c  map_map.c  map_remove.c  map_remove_cstr.c  map_set.c  map_set_cstr.c  map_size.c
tests/alloc/string/: string_append.c  string_casecmp.c  string_clear.c  string_clone.c  string_cmp.c  string_cstr.c  string_embedded_nul.c  string_ends_with.c  string_equals.c  string_erase.c  string_find.c  string_free.c  string_from.c  string_insert.c  string_new.c  string_pop_char.c  string_prepend.c  string_push_char.c  string_replace.c  string_reserve.c  string_resize.c  string_rfind.c  string_shrink_to_fit.c  string_split.c  string_starts_with.c  string_substr.c  string_tagged.c  string_trim.c
tests/alloc/vec/: vec_create.c  vec_free.c  vec_get.c  vec_pop_back.c  vec_pop_front.c  vec_push_back.c  vec_push_front.c  vec_resize.c  vec_set.c
tests/ctype/ctype/: ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_islower.c  ft_isprint.c  ft_isspace.c  ft_isupper.c  ft_tolower.c  ft_toupper.c
tests/ctype/nbr/: cstoi16.c  cstoi32.c  cstoi64.c  cstoi8.c  cstonbr.c  cstou16.c  cstou32.c  cstou64.c  cstou8.c  cstounbr.c  cstr_i16.c  cstr_i32.c  cstr_i64.c  cstr_i8.c  cstr_nbr.c  cstr_u16.c  cstr_u32.c  cstr_u64.c  cstr_u8.c  cstr_unbr.c
tests/io/basic/: io_push_char.c  io_push_cstr.c  io_push_double.c  io_push_float.c  io_push_hex.c  io_push_int.c  io_push_ldouble.c  io_push_nbytes.c  io_push_nchar.c  io_push_ncstr.c  io_push_ptr.c  io_push_string.c  io_push_uint.c
tests/memory/cstr/: ft_casecmp.c  ft_strcat.c  ft_strchr.c  ft_strcmp.c  ft_strcpy.c  ft_strcspn.c  ft_strdup.c  ft_strlcat.c  ft_strlen.c  ft_strncat.c  ft_strncmp.c  ft_strncpy.c  ft_strndup.c  ft_strpbrk.c  ft_strrchr.c  ft_strrstr.c  ft_strspn.c  ft_strstr.c
tests/memory/ops/: ft_bzero.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmem.c  ft_memmove.c  ft_mempcpy.c  ft_memrchr.c  ft_memset.c
tests/support/: list_helpers.c  list_helpers.h  string_helpers.h
